--- a/docker/nginx/index.html
+++ b/docker/nginx/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 <h1>Welcome to Bitmedia labs!</h1>
-<p>This is a test task by Dmytro Sheptun.</p>
+<p>This is a test task by Dmytro Sheptun!</p>
 
 <h2>IP Address and Location Detection</h2>
 <button onclick="getIPDetails()">Get IP Details</button>
